assets/css/style.css
/* ... */
.contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
  background-color: rgba(255, 255, 255, 0.11);
}

.contact .php-email-form input::-webkit-input-placeholder, .contact .php-email-form textarea::-webkit-input-placeholder {
  color: rgba(255, 255, 255, 0.3);
  opacity: 1;
}

.contact .php-email-form input::-moz-placeholder, .contact .php-email-form textarea::-moz-placeholder {
  color: rgba(255, 255, 255, 0.3);
  opacity: 1;
}

.contact .php-email-form input:-ms-input-placeholder, .contact .php-email-form textarea:-ms-input-placeholder {
  color: rgba(255, 255, 255, 0.3);
  opacity: 1;
}

.contact .php-email-form input::-ms-input-placeholder, .contact .php-email-form textarea::-ms-input-placeholder {
  color: rgba(255, 255, 255, 0.3);
  opacity: 1;
}

.contact .php-email-form input::placeholder, .contact .php-email-form textarea::placeholder {
  color: rgba(255, 255, 255, 0.3);
  opacity: 1;
}

.contact .php-email-form input {
  padding: 20px 15px;
}

.contact .php-email-form textarea {
  padding: 12px 15px;
}

.contact .php-email-form button[type="submit"] {
  background: #ffc107;
  border: 0;
  padding: 10px 30px;
  color: #fff;
  transition: 0.4s;
  border-radius: 4px;
}

.contact .php-email-form button[type="submit"]:hover {
  background: #ffc107;
}

@-webkit-keyframes animate-loading {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes animate-loading {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/*--------------------------------------------------------------
# Credits
--------------------------------------------------------------*/
.credits {
  position: fixed;
  right: 15px;
  bottom: 15px;
  font-size: 13px;
  color: #fff;
  z-index: 1;
}

.credits a {
  color: #ffc107;
  transition: 0.3s;
}

.credits a:hover {
  color: #fff;
}

@media (max-width: 992px) {
  .credits {
    left: 50%;
    right: 0;
    transform: translateX(-50%);
  }
}

/*--------------------------------------------------------------
# Profile Image
--------------------------------------------------------------*/
.img-container {
  width: 200px;
  height: 200px;
  overflow: hidden;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.img-circle {
  object-fit: cover;
  max-width: 100%;
  max-height: 100%;
}

/*--------------------------------------------------------------
# Utility Classes
--------------------------------------------------------------*/
.text-left { text-align: left; }
.color-accent { color: #ffc107; }
.color-white { color: #fff; }
.fs-20 { font-size: 20px; }
.inline-block { display: inline-block; }
.pb-5px { padding-bottom: 5px; }

